<resources>
    <string name="app_name">TheLandLord</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logo_image">logo image</string>
    <string name="already_registered_login">Already registered? Login</string>
    <string name="login">LOGIN</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="property_name">Property name</string>
    <string name="location">Location</string>
    <string name="add">ADD</string>
    <string name="rental_number">Rental or Apartment Number</string>
    <string name="tenancy_start_date">Tenancy start date</string>
    <string name="done">DONE</string>
    <string name="amount_paid">Amount paid</string>
    <string name="balance">Balance</string>
    <string name="date_of_payment">Date of Payment</string>
    <string name="property_list">Property List</string>
    <string name="transaction_summary">Transaction Summary</string>
    <string name="profile">Profile</string>
    <string name="the_landlord">The Landlord</string>
    <string name="sign_up">Sign Up</string>
    <string name="no_account_yet_create_one">NO ACCOUNT YET? CREATE ONE</string>
    <string name="confirm_password">Confirm password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="enter_property_name">Enter property name</string>
    <string name="enter_location">Enter Location</string>
    <string name="enter_rental_id">Enter Rental ID</string>
    <string name="enter_monthly_amount">Enter monthly amount</string>
    <string name="enter_tenant_name">Enter tenant name</string>
    <string name="enter_tenant_contact">Enter tenant contact</string>
    <string name="enter_tenant_start_date">Enter tenancy start date</string>
    <string name="add_rental">ADD RENTAL</string>
    <string name="rentals">RENTALS</string>
    <string name="payments">PAYMENTS</string>
    <string name="defaulters">DEFAULTERS</string>
    <string name="tenant_name">Tenant name</string>
    <string name="tenant_contact">Tenant contact</string>
    <string name="monthly_amount">Monthly amount</string>
    <string name="outstanding">Outstanding:</string>
    <string name="last_payment">Last payment:</string>
    <string name="edit_tenant_details">EDIT TENANT DETAILS</string>
    <string name="remove_tenant_details">REMOVE TENANT DETAILS</string>
    <string name="ad_box">AD BOX</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="amount">Amount</string>
    <string name="payment_for">Payment for?</string>
    <string name="advance_payment">Advance payment?</string>
    <string name="add_payment">ADD PAYMENT</string>
    <string name="add_field">ADD FIELD</string>
    <string name="no_debts_currently">No debts currently</string>
    <string name="mm">mm</string>
    <string name="yyyy">yyyy</string>
    <string name="start_computing_rent_from">Start computing rent from</string>
    <string name="set">SET</string>
    <string name="cancel">Cancel</string>
    <string name="remove_field">Remove field</string>
    <string name="search_debts">Search debts</string>
    <string name="search_payments">Search payments</string>

</resources>
