<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/largeMarginTop">

    <LinearLayout
        android:id="@+id/month_layout"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="@dimen/largeMarginEnd"
        android:layout_marginRight="@dimen/largeMarginEnd">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/month"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/advance_month_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/mm"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/advance_year_txt"
            android:background="@drawable/rounded_border_text_view"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/year_layout"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/month_layout"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="@dimen/largeMarginStart">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/year"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/advance_year_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/yyyy"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rounded_border_text_view"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/amount_layout"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginEnd="@dimen/largeMarginEnd"
        android:layout_marginRight="@dimen/largeMarginEnd"
        app:layout_constraintTop_toBottomOf="@id/month_layout"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/largeMarginTop">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/advance_amount_edit_txt_vw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint=" "
            android:inputType="numberDecimal"
            android:layout_marginTop="3dp"
            android:text="1000"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:ignore="HardcodedText"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rounded_border_text_view"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/delete_payt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_delete"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/remove_field"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/set_date_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set"
        android:minHeight="0dp"
        android:minWidth="0dp"
        app:layout_constraintStart_toEndOf="@id/year_layout"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="@dimen/largeMarginStart"/>



</androidx.constraintlayout.widget.ConstraintLayout>
