<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.addpayment.AddPayment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="?attr/largePaddingStart">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/amount_paid_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/amount_paid"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/amount_paid_edit_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/date_of_payment_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/date_of_payment"
            app:layout_constraintEnd_toStartOf="@+id/calender_icon"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/amount_paid_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/date_of_payment_txt_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/calender_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            android:src="@drawable/ic_calender"
            app:layout_constraintStart_toEndOf="@+id/date_of_payment_layout"
            app:layout_constraintTop_toBottomOf="@+id/amount_paid_layout" />

        <Spinner
            android:id="@+id/months_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/date_of_payment_layout"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/balance_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?attr/largeMarginTop"
            android:hint="@string/balance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/months_spinner">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/balance_edit_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>

<!--TODO: COULD BE A DIALOG FRAGMENT-->