<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.addproperty.AddProperty">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="?attr/largePaddingStart"
        android:paddingVertical="?attr/largePaddingTop">

        <ImageView
            android:id="@+id/property_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintTop_toTopOf="parent"
            android:background="?attr/imageBackground"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/add_property_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add"
            app:layout_constraintTop_toTopOf="@id/property_image"
            app:layout_constraintBottom_toBottomOf="@id/property_image"
            app:layout_constraintStart_toStartOf="@+id/property_image"
            app:layout_constraintEnd_toEndOf="@id/property_image"
            tools:ignore="ContentDescription" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/property_name_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/property_image"
            android:layout_marginTop="?attr/largeMarginTop">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/property_name_txt_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/property_name"
                    android:paddingHorizontal="@dimen/largePaddingStart"
                    android:paddingVertical="@dimen/mediumPaddingTop"
                    app:layout_constraintTop_toTopOf="parent"/>

                <com.google.android.material.textfield.TextInputLayout
                    app:layout_constraintTop_toBottomOf="@+id/property_name_txt_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/property_name_edit_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="?attr/mainTextInputColor"/>

                </com.google.android.material.textfield.TextInputLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/property_location_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?attr/extraLargeMarginTop"
            app:layout_constraintTop_toBottomOf="@id/property_name_card_view">
            
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/property_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:paddingVertical="@dimen/mediumPaddingTop"
                    android:paddingHorizontal="@dimen/largePaddingStart"
                    app:layout_constraintTop_toTopOf="parent"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/property_location_edit_txt_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/property_location">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/property_location_edit_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="?attr/mainTextInputColor"/>

                </com.google.android.material.textfield.TextInputLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_property_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/property_location_card_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="?largeMarginTop"
            android:text="@string/add" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>